--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Web Developer</h3>
                             <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <p>Ponga sobre la mesa estrategias de supervivencia
+                                 en las que todos salgan ganando para garantizar un dominio proactivo.
+                                  Al fin y al cabo, en el futuro, una nueva normalidad que ha evolucionado
+                                   desde la generación X está en la pista de despegue hacia una solución en 
+                                   la nube racionalizada. El contenido generado por el usuario en tiempo 
+                                   real tendrá múltiples puntos de contacto para la deslocalización.
+
+                            </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
@@ -76,7 +83,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Developer</h3>
                             <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <p>Aprovechar los frutos maduros para identificar una actividad de valor añadido aproximado que probar. Superar la brecha digital con clics adicionales de DevOps. La inmersión en la nanotecnología a lo largo de la autopista de la información cerrará el círculo para centrarse únicamente en los resultados.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
@@ -84,7 +91,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Junior Web Designer</h3>
                             <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <p>Podcasting de la gestión del cambio operativo dentro de los flujos de trabajo para establecer un marco. Llevar los indicadores clave de rendimiento sin fisuras fuera de línea para maximizar la larga cola. Mantener la vista en la pelota mientras se realiza una inmersión profunda en la mentalidad de puesta en marcha para derivar la convergencia en la integración entre plataformas.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
                     </div>
@@ -92,7 +99,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Design Intern</h3>
                             <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <p>Administre de forma colaborativa mercados potenciados a través de redes plug-and-play. Procrastinar dinámicamente a los usuarios B2C tras los beneficios de la base instalada. Visualice de forma espectacular la convergencia dirigida al cliente sin un ROI revolucionario.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
