--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Curriculum Vitae</title>
+        <!-- OP de ejemplo -->
+        <meta property="og:title" content="Curriculum Vitae" />
+        <meta property="og:type" content="video.movie" />
+        <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+        <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+        
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
